# acompanhador-de-concurso

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: integration.yaml  unit_test.yaml
ConcursoPublicoFrontend/: README.md  angular.json  package-lock.json  package.json
ConcursoPublicoFrontend/src/: index.html  output.css  styles.scss
ConcursoPublicoFrontend/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
ConcursoPublicoFrontend/src/app/components/about/: about.html  about.ts
ConcursoPublicoFrontend/src/app/core/: convert-case-interceptor.spec.ts  convert-case-interceptor.ts
ConcursoPublicoFrontend/src/app/services/: auth.ts  search-alerts.spec.ts  search-alerts.ts  subscriptions.spec.ts  subscriptions.ts  token.ts  user.ts
ConcursoPublicoFrontend/src/environments/: environment.development.ts  environment.production.ts
backend-service/: #pyproject.toml#  .env example  Dockerfile  Makefile  pyproject.toml
backend-service/backend_service/: #main.py#  config.py  main.py
backend-service/backend_service/controllers/: auth_controller.py  search_alert_controller.py  subscription_controller.py  user_controller.py
backend-service/backend_service/dependencies/: client_session_dependencies.py  models_dependencies.py  services_dependencies.py
backend-service/backend_service/exceptions/: controller_exceptions.py  services_exceptions.py
backend-service/backend_service/models/: search_alert_model.py  subscription_model.py  tracking_model.py  user_model.py
backend-service/backend_service/services/: auth_service.py  database_service.py  logging_service.py  stripe_service.py
backend-service/backend_service/webhooks/: stripe_webhooks.py
backend-service/tests/: conftest.py
backend-service/tests/fixtures/: sample_checkout_session_completed.json  search_alerts_fixtures.py  stripe_webhook_setup.bash  subscription_fixtures.py  user_fixtures.py
backend-service/tests/integration/: test_app.py
backend-service/tests/integration/controllers/: test_auth_controller.py  test_search_alert_controller.py  test_subscription_controller.py  test_user_controller.py
backend-service/tests/integration/dependencies/: test_client_session_dependencies.py  test_models_dependencies.py
backend-service/tests/integration/webhooks/: test_stripe_webhook.py
backend-service/tests/unit/services/: test_auth_service.py  test_logging_service.py
serviço-modelo-estado/: Makefile  pyproject.toml
serviço-modelo-estado/inputs/: concursos.csv
serviço-modelo-estado/modelo_estado/: app.py  config.py  exploratório.py
serviço-modelo-estado/modelo_estado/modelo_01/: dados.py  modelo.py  pipeline.py  preprocessamento.py
serviço-nlp/: pyproject.toml
serviço-scraper/: Dockerfile  Makefile  compose.yaml  fill_db.py  pyproject.toml
serviço-scraper/arquivos/: categorias.json  tipos.json
serviço-scraper/src/serviço_scraper/: app.py  config.py  sessions.py
serviço-scraper/src/serviço_scraper/dtos/: conteúdo.py
serviço-scraper/src/serviço_scraper/interfaces/: categorizador.py  cliente_http.py  repositório.py  scraper.py
serviço-scraper/src/serviço_scraper/serviços/: categorizador_tipo.py  cliente_httpx.py  dou_scraper.py  repositório_sqlalchemy.py  utils.py
serviço-scraper/tests/: conftest.py
serviço-scraper/tests/e2e_tests/: test_app.py
serviço-scraper/tests/fixtures/: conteúdo_fixtures.py
serviço-scraper/tests/unit_tests.py/dtos/: test_conteúdo_dto.py
serviço-scraper/tests/unit_tests.py/interfaces/: test_categorizador.py  test_cliente_http.py  test_repositório.py
serviço-scraper/tests/unit_tests.py/serviços/: test_categorizador_tipo.py  test_cliente_httpx.py  test_dou_scraper.py  test_repositório_sqlalchemy.py  test_utils.py
(+12 files in other folders)
