[project]
name = "backend-service"
version = "1.0.0"
description = ""
authors = [
    {name = "Edmilson Monteiro Rodrigues Neto",email = "edmilson.rodriguesn38@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "uvicorn[all] (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-config (>=0.3.0,<0.4.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "oci (>=2.154.0,<3.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "freezegun (>=1.5.2,<2.0.0)",
    "stripe (>=12.2.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.0"
ruff = "^0.11.13"
pydantic = {extras = ["mypy"], version = "^2.11.5"}


[tool.poetry.group.tests.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
factory-boy = "^3.3.3"


[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
preview = true

[tool.ruff.lint]
select = ["I", "UP", "W", "F", "E", "PT"]

[tool.pytest.ini_options]
addopts = [
    "--cov=backend_service",
    "--cov-report=html",
    "-vvv"
]

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_untyped_imports = true
